tests/neg/i4247b.scala
class Foo[U] { self : Array[U] =>
  self(0) // error
}
